More scrollbar fixing for IE

--- a/coastal-hazards-portal/src/main/webapp/less/front/slider-items.less
+++ b/coastal-hazards-portal/src/main/webapp/less/front/slider-items.less
@@ -38,6 +38,10 @@
 	}
 }
 
+#application-slide-items-content-container-inner-scrollable {
+	overflow-x: hidden;
+}
+
 #application-slide-items-content-container-inner-scrollable,
 .panel {
 	&.introjs-fixParent {
